--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <title>URL Cache w/ Job Queue</title>
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
